# openrelik-worker-bulkextractor

./: .gitignore  Dockerfile  README.md  openrelik.yaml  pyproject.toml
src/: tasks.py  text_formatter.py  utils.py
tests/: test_utils.py
